--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ title: "Akiode Emmanuel O"
 # logo: /asset/img/headshot_circle.png
 # description: text below image
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-architect
+
