--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,8 @@ title: "Akiode Emmanuel O"
 # description: text below image
 show_downloads: true
 theme: jekyll-theme-architect
+email: "Akifem.emma@gmail.com"
+mobile: "+2348169221496"
+linkedin: "https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BTwJ68siFTQe0c5mozfExjA%3D%3D"
+
 
