--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Akiode Emmanuel O"
+title: "Akiode Emmanuel"
 show_downloads: true
 theme: jekyll-theme-architect
 email: "Akifem.emma@gmail.com"
